--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div>
                     <h3>VIDEO LEBARAN</h3>
                     <video controls>
-                        <source src="D:\SEKOLAH\Visual code\lebaran.mp4">
+                        <source src="H\Visual code\lebaran.mp4">
                     </video>
                 </div>
                 <div>
@@ -236,11 +236,11 @@
                 <br>
             <div class="foto">
                     <div>
-                        <img src="D:\SEKOLAH\Visual code\WhatsApp Image 2023-07-22 at 18.20.53.jpeg" alt="lebaran 1">
+                        <img src="WhatsApp Image 2023-07-22 at 18.20.53.jpeg" alt="lebaran 1">
                         <h3 class="tekspt1">FOTO 1</h3>
                     </div>
                     <div>
-                        <img src="D:\SEKOLAH\Visual code\WhatsApp Image 2023-07-22 at 18.27.52.jpeg" alt="lebaran 2">
+                        <img src="WhatsApp Image 2023-07-22 at 18.27.52.jpeg" alt="lebaran 2">
                         <h3 class="tekspt2">FOTO 2</h3>
                     </div>
                 
