--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                 <br>
             <div class="foto">
                     <div>
-                        <img src="WhatsApp Image 2023-07-22 at 18.20.53.jpeg" alt="lebaran 1">
+                        <img src="foto1.jpeg" alt="lebaran 1">
                         <h3 class="tekspt1">FOTO 1</h3>
                     </div>
                     <div>
-                        <img src="WhatsApp Image 2023-07-22 at 18.27.52.jpeg" alt="lebaran 2">
+                        <img src="foto2.jpeg" alt="lebaran 2">
                         <h3 class="tekspt2">FOTO 2</h3>
                     </div>
                 
