--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
                 <div>
                     <h3>VIDEO LEBARAN</h3>
                     <video controls>
-                        <source src="H\Visual code\lebaran.mp4">
+                        <source src="lebaran.mp4">
                     </video>
                 </div>
                 <div>
                     <h3>VIDEO CHUAKZ</h3>
                     <video controls>
-                        <source src="D:\SEKOLAH\Visual code\cuakz.mp4">
+                        <source src="cuakz.mp4">
                     </video>
                 </div>
             </div>
